// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallToActionButton renders correctly 1`] = `
<div>
  <div
    class="css-zce95a-boxStyles-CallToAction"
  >
    <button
      class="css-t28hm-BaseButton-boxStyles"
      data-testid="example"
      type="button"
    >
      Sign up
      <svg
        aria-hidden="true"
        class="css-u8huve-Icon"
        clip-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 4 7.646 7.646a.5.5 0 0 1 0 .708L9 20"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`CallToActionLink renders correctly 1`] = `
<div>
  <div
    class="css-zce95a-boxStyles-CallToAction"
  >
    <a
      class="css-mzhcw2-TextLink-boxStyles"
      data-testid="example"
      href="#"
    >
      Sign up
      <svg
        aria-hidden="true"
        class="css-u8huve-Icon"
        clip-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 4 7.646 7.646a.5.5 0 0 1 0 .708L9 20"
        />
      </svg>
    </a>
  </div>
</div>
`;
